--- a/BookItSrc/src/app/main/sub-main/settings/locations/locations.component.scss
+++ b/BookItSrc/src/app/main/sub-main/settings/locations/locations.component.scss
@@ -84,3 +84,9 @@ section.header {
 .label-loc-city-street {
   font: 8px;
 }
+
+@media (max-width: 235px) {
+  .container {
+    display: none;
+  }
+}
