--- a/BookItSrc/src/app/main/sub-main/settings/settings.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/settings.component.html
@@ -51,8 +51,8 @@
       <mat-card class="RightLeftStyle">
         <mat-card-content>
           <section class="form-section">
-            <div class="container_location">
-              <label class="form-margin-c1" name="location_lab_1"> Share My Books</label>
+            <div class="container_share_books">
+              <label class="form-margin-c1-share-books" name="location_lab_1"> Share My Books</label>
               <span class="spacer"></span>
               <mat-slide-toggle class="slide-show-books"  [(ngModel)]="this.userSettings.info.shareMyBooks"
               (change)="this.updateShareMyBooks()">
