--- a/BookItSrc/src/app/main/sub-main/my-books/add-book/add-book.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-books/add-book/add-book.component.scss
@@ -4,6 +4,34 @@ ul {
   padding: 0;
 
 }
+.header {
+  background-color: #2B2727; 
+  color: white;
+  width: 100%;
+  
+  flex: auto;
+  display: flex;
+}
+button-switch-page {
+  flex: start;
+  float: left;
+}
+
+label.header-cat {
+  flex-grow: 2;
+  position: absolute;
+  margin: 0;
+  left: 50%;
+  transform: translate(-50%,0%);
+}
+.left-arrow-icon{
+  height:50px;
+}
+section {
+  display: flex;
+  align-items: center;
+  justify-content: stretch;
+}
 .cover{
   border-radius: 0px;
   filter: drop-shadow(rgb(43, 39, 39) 1px 1px 2px);
