--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.html
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.html
@@ -3,7 +3,7 @@
     <div *ngSwitchCase="'my_books'">
             
 <div class="mybooks">
-        <mat-grid-list cols="3" gutterSize="10" rowHeight="5:8">
+        <mat-grid-list [cols]="numCols" gutterSize="10" rowHeight="5:8" (window:resize)="onResize($event)">
                 <mat-grid-tile *ngFor="let book of userBooks">
                    <img class='cover' [attr.src]="book.imagePath" />
                 </mat-grid-tile>
