change number of columns when resize screen in addbook

--- a/BookItSrc/src/app/main/navbar/navbar/navbar.component.scss
+++ b/BookItSrc/src/app/main/navbar/navbar/navbar.component.scss
@@ -10,10 +10,12 @@
   }
 
   .mat-toolbar-row{
+    background-color: #2B2727;
     display: flex;
     justify-content: space-between;
   }
   .mat-toolbar-row2{
+    background-color: #fafafa;
     display: flex;
     justify-content: flex-start;
     flex-direction: row;
