--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.html
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.html
@@ -1,29 +1,57 @@
 
 <container-element [ngSwitch]="this.which_page">
-    <div *ngSwitchCase="'my_books'">
-            
-<div class="mybooks">
-        <mat-grid-list [cols]="numCols" gutterSize="10" rowHeight="5:8" (window:resize)="onResize($event)">
-                <mat-grid-tile *ngFor="let book of userBooks">
-                   <img class='cover' [attr.src]="book.imagePath" />
-                </mat-grid-tile>
+    <div *ngSwitchCase="'my_books'">       
+        <div class="mybooks">
+            <mat-grid-list class="my-books" [cols]="numCols" gutterSize="10" rowHeight="5:8" (window:resize)="onResize()">
                 <mat-grid-tile>
-                        <button class="cover" (click)="goToAddbook()">
-                                <i class="fas fa-plus"></i>
-                            </button>
-                        
+                    <button class="cover" (click)="goToAddbook()">
+                        <i class="fas fa-plus"></i>
+                    </button>        
+                </mat-grid-tile>
+                <mat-grid-tile  *ngFor="let book of userBooks" (click)="showBookNavbar(book)">
+                   <img class='cover' [ngClass]="{'blurred': (this.bookNavBarEnabled==true && this.bookSelected!=book) , 'regular': (this.bookNavBarEnabled==false ||this.bookSelected==book) }" [attr.src]="book.imagePath" />
                 </mat-grid-tile>
             </mat-grid-list>
-</div>
-          
-            
+        </div>
+        <p>add books to share!</p>
+        <div *ngIf="this.bookNavBarEnabled===true; then bookNavbar"></div>
 
-         
     </div>
-      <app-add-book  *ngSwitchCase="'add_book'" [masterBooksArray]="userBooks"></app-add-book>
-
-
-
-
+    <app-add-book  *ngSwitchCase="'add_book'" [masterBooksArray]="userBooks"></app-add-book>
 </container-element>
 
+
+<ng-template #bookNavbar>
+        <div class='bookNavbarBox'>
+                <mat-grid-list class="bookNavbarList" rowHeight="50px" cols="5" gutterSize="10">
+                        <mat-grid-tile>
+                            <button style="font-size:1em; color:#1AED3A;filter: drop-shadow(0 0 1px rgba(0,0,0,0.7));" (click)="goToAddbook()">
+                                <i class="fas fa-check-circle"></i>
+                            </button>        
+                        </mat-grid-tile>
+                        <mat-grid-tile>
+                            <button style="font-size:1em; color:#ED1A1A;filter: drop-shadow(0 0 1px rgba(0,0,0,0.7));" (click)="goToAddbook()">
+                                <i class="fas fa-times-circle"></i>
+                            </button>        
+                        </mat-grid-tile>
+                        <mat-grid-tile>
+                            <button style="font-size:1em; color:#2B2727;filter: drop-shadow(0 0 1px rgba(0,0,0,0.7));" (click)="goToAddbook()">
+                                <i class="fas fa-comments"></i>
+                            </button>        
+                        </mat-grid-tile>
+                        <mat-grid-tile>
+                            <button style="font-size:1em; color:#2B2727;filter: drop-shadow(0 0 1px rgba(0,0,0,0.7));" (click)="goToAddbook()">
+                                <i class="fas fa-user"></i>
+                            </button>        
+                        </mat-grid-tile>
+                        <mat-grid-tile>
+                            <button style="font-size:1em; color:#2B2727;filter: drop-shadow(0 0 1px rgba(0,0,0,0.7));" (click)="removeBook(book)">
+                                    <i class="fas fa-trash-alt"></i>
+                                </button>        
+                        </mat-grid-tile>
+                        <!-- <mat-grid-tile *ngFor="let book of userBooks">
+                           <img class='cover' [attr.src]="book.imagePath" />
+                        </mat-grid-tile> -->
+                    </mat-grid-list>
+        </div>
+</ng-template>
