--- a/BookItSrc/src/styles.scss
+++ b/BookItSrc/src/styles.scss
@@ -2,7 +2,7 @@
 @import './custom-theme.scss';
 //@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import '~bootstrap/dist/css/bootstrap.min.css';
-
+@import '~bootstrap/dist/css/custom.css';
 html, body {
     background-color: #fafafa;
 }
