--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.html
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.html
@@ -8,7 +8,7 @@
                         <i class="fas fa-plus"></i>
                     </button>        
                 </mat-grid-tile>
-                <mat-grid-tile  *ngFor="let book of userBooks" (click)="showBookNavbar(book)">
+                <mat-grid-tile  *ngFor="let book of userBooks" (click)="showBookNavbar(book)" (clickOutside)="hideBookNavbar(book)">
                    <img class='cover' [ngClass]="{'blurred': (this.bookNavBarEnabled==true && this.bookSelected!=book) , 'regular': (this.bookNavBarEnabled==false ||this.bookSelected==book) }" [attr.src]="book.imagePath" />
                 </mat-grid-tile>
             </mat-grid-list>
@@ -25,27 +25,27 @@
         <div class='bookNavbarBox'>
                 <mat-grid-list class="bookNavbarList" rowHeight="50px" cols="5" gutterSize="10">
                         <mat-grid-tile>
-                            <button style="font-size:1em; color:#1AED3A;filter: drop-shadow(0 0 1px rgba(0,0,0,0.7));" (click)="goToAddbook()">
+                            <button style="font-size:1em; color:#1AED3A;filter: drop-shadow(0 0 1px rgba(0,0,0,0.7));" (click)="approveRequest()">
                                 <i class="fas fa-check-circle"></i>
                             </button>        
                         </mat-grid-tile>
                         <mat-grid-tile>
-                            <button style="font-size:1em; color:#ED1A1A;filter: drop-shadow(0 0 1px rgba(0,0,0,0.7));" (click)="goToAddbook()">
+                            <button style="font-size:1em; color:#ED1A1A;filter: drop-shadow(0 0 1px rgba(0,0,0,0.7));" (click)="rejectRequest()">
                                 <i class="fas fa-times-circle"></i>
                             </button>        
                         </mat-grid-tile>
                         <mat-grid-tile>
-                            <button style="font-size:1em; color:#2B2727;filter: drop-shadow(0 0 1px rgba(0,0,0,0.7));" (click)="goToAddbook()">
+                            <button style="font-size:1em; color:#2B2727;filter: drop-shadow(0 0 1px rgba(0,0,0,0.7));" (click)="startChat()">
                                 <i class="fas fa-comments"></i>
                             </button>        
                         </mat-grid-tile>
                         <mat-grid-tile>
-                            <button style="font-size:1em; color:#2B2727;filter: drop-shadow(0 0 1px rgba(0,0,0,0.7));" (click)="goToAddbook()">
+                            <button style="font-size:1em; color:#2B2727;filter: drop-shadow(0 0 1px rgba(0,0,0,0.7));" (click)="showUser()">
                                 <i class="fas fa-user"></i>
                             </button>        
                         </mat-grid-tile>
                         <mat-grid-tile>
-                            <button style="font-size:1em; color:#2B2727;filter: drop-shadow(0 0 1px rgba(0,0,0,0.7));" (click)="removeBook(book)">
+                            <button style="font-size:1em; color:#2B2727;filter: drop-shadow(0 0 1px rgba(0,0,0,0.7));" (click)="removeBook()">
                                     <i class="fas fa-trash-alt"></i>
                                 </button>        
                         </mat-grid-tile>
