--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
@@ -29,7 +29,7 @@ body{
     filter: drop-shadow(0 0 3px rgba(0,0,0,0.7));
   }
   .bookNavbarBox{
-    position: absolute;
+    position:fixed;
     bottom:0%;
     color:white;
     background-color: #C8C8C8;
