--- a/BookItSrc/src/app/main/main.component.html
+++ b/BookItSrc/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<div style="text-align:center">
+<div style="text-align:center; height: 100%;">
   <app-navbar></app-navbar>
   <app-sub-main></app-sub-main>
 </div>
