--- a/BookItSrc/src/app/main/sub-main/explore/explore.component.html
+++ b/BookItSrc/src/app/main/sub-main/explore/explore.component.html
@@ -1,7 +1,25 @@
 <div class="mybooks">
     <mat-grid-list class="my-books" [cols]="numCols" gutterSize="10" rowHeight="5:8" (window:resize)="onResize()">
-        <mat-grid-tile  *ngFor="let book of booksNearBy">
-           <img class='cover' [attr.src]="book.imagePath" />
+        <mat-grid-tile  *ngFor="let book of booksNearBy"(click)="showBookNavbar(book)" (clickOutside)="hideBookNavbar(book)">
+           <img class='cover'[ngClass]="{'blurred': (this.bookNavBarEnabled==true && this.bookSelected!=book) , 'regular': (this.bookNavBarEnabled==false ||this.bookSelected==book) }" [attr.src]="book.imagePath" />
         </mat-grid-tile>
     </mat-grid-list>
 </div>
+<div *ngIf="this.bookNavBarEnabled===true; then bookNavbar"></div>
+
+<ng-template #bookNavbar>
+    <div class='bookNavbarBox'>
+            <mat-grid-list class="bookNavbarList" rowHeight="50px" cols="2" gutterSize="10">
+                    <mat-grid-tile>
+                        <button style="font-size:1em; color:#2B2727;background-color:#C8C8C8;" (click)="bookInfo()">
+                            <i class="fas fa-info-circle"></i>
+                        </button>        
+                    </mat-grid-tile>
+                    <mat-grid-tile>
+                        <button style="font-size:1em; color:#2B2727;background-color:#C8C8C8;" (click)="requestBook()">
+                                <img src="https://png.icons8.com/ios/35/2B2727/borrow-book-filled.png">
+                            </button>        
+                    </mat-grid-tile>
+                </mat-grid-list>
+    </div>
+</ng-template>
