--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.html
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.html
@@ -1,4 +1,4 @@
-
+<div>
 <container-element [ngSwitch]="this.which_page">
     <div *ngSwitchCase="'my_books'">       
         <div class="mybooks">
@@ -19,7 +19,7 @@
     </div>
     <app-add-book  *ngSwitchCase="'add_book'" [masterBooksArray]="userBooks"></app-add-book>
 </container-element>
-
+</div>
 
 <ng-template #bookNavbar>
         <div class='bookNavbarBox'>
@@ -49,9 +49,7 @@
                                     <i class="fas fa-trash-alt"></i>
                                 </button>        
                         </mat-grid-tile>
-                        <!-- <mat-grid-tile *ngFor="let book of userBooks">
-                           <img class='cover' [attr.src]="book.imagePath" />
-                        </mat-grid-tile> -->
                     </mat-grid-list>
         </div>
 </ng-template>
+
