--- a/BookItSrc/src/styles.scss
+++ b/BookItSrc/src/styles.scss
@@ -5,4 +5,6 @@
 //@import '~bootstrap/dist/css/custom.css';
 html, body {
     background-color: #fafafa;
+    height: 100%;
+    line-height: 1.2;
 }
