--- a/BookItSrc/src/app/main/sub-main/explore/explore.component.scss
+++ b/BookItSrc/src/app/main/sub-main/explore/explore.component.scss
@@ -5,10 +5,12 @@ body{
 
 //switch categories
 .header {
-  background-color: #2B2727; 
+  background-color: #757575; 
   color: white;
   width: 100%;
   
+  //border-top: 2px solid #757575;
+  //border-bottom: 2px solid #757575;
   flex: auto;
   display: flex;
 }
@@ -24,7 +26,7 @@ label.header-cat {
   transform: translate(0%,0%);
 }
 .arrow-icon{
-  height:56px;
+  height:35px;
 }
 #rightArrowIcon{
   position: relative;
