right arrow fixed

--- a/BookItSrc/src/app/main/sub-main/settings/settings.component.scss
+++ b/BookItSrc/src/app/main/sub-main/settings/settings.component.scss
@@ -156,7 +156,7 @@ div.container_categories {
   max-width: 50px;
 }
 
-/deep/ #button_logout {
+#button_logout {
   font-weight: 600;
   min-height: 30px;
   margin-top: 10px;
