--- a/BookItSrc/src/app/main/sub-main/settings/settings.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/settings.component.html
@@ -86,5 +86,5 @@
 
 
 <ng-template #rightArrowIcon>
-  <mat-icon svgIcon='right-arrow' class="right-arrow-icon"></mat-icon>
+  <mat-icon svgIcon='right-arrow-settings' class="right-arrow-icon"></mat-icon>
 </ng-template>
