add some snack bar

--- a/BookItSrc/src/app/main/sub-main/explore/explore.component.scss
+++ b/BookItSrc/src/app/main/sub-main/explore/explore.component.scss
@@ -86,10 +86,10 @@ section {
   button{
     border:0;
   }
-  .mybooks{
-    width:70%;
-    margin-left:15%;
-    //text-align: center;  
+  .my-books{
+    margin-top: 5%;
+    margin-left:  5%;
+    margin-right: 5%;
   }
 
   .centered {
