--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.html
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.html
@@ -1,55 +1,64 @@
-<div>
-<container-element [ngSwitch]="this.which_page">
-    <div *ngSwitchCase="'my_books'">       
-        <div class="mybooks">
-            <mat-grid-list class="my-books" [cols]="numCols" gutterSize="10" rowHeight="5:8" (window:resize)="onResize()">
+<div *ngIf="status.loading && !status.loaded; then loading  else loaded"></div>
+<ng-template #loaded>
+    <div>
+        <container-element [ngSwitch]="this.which_page">
+            <div *ngSwitchCase="'my_books'">
+                <div class="mybooks">
+                    <mat-grid-list class="my-books" [cols]="numCols" gutterSize="10" rowHeight="5:8" (window:resize)="onResize()">
+                        <mat-grid-tile>
+                            <button class="cover" (click)="goToAddbook()">
+                                <i class="fas fa-plus"></i>
+                            </button>
+                        </mat-grid-tile>
+                        <mat-grid-tile *ngFor="let book of userBooks" (click)="showBookNavbar(book)" (clickOutside)="hideBookNavbar(book)">
+                            <img class='cover' [ngClass]="{'blurred': (this.bookNavBarEnabled==true && this.bookSelected!=book) , 'regular': (this.bookNavBarEnabled==false ||this.bookSelected==book) }"
+                                [attr.src]="book.imagePath" />
+                        </mat-grid-tile>
+                    </mat-grid-list>
+                </div>
+                <p>add books to share!</p>
+                <div *ngIf="this.bookNavBarEnabled===true; then bookNavbar"></div>
+
+            </div>
+            <app-add-book *ngSwitchCase="'add_book'" [masterBooksArray]="userBooks"></app-add-book>
+        </container-element>
+    </div>
+
+    <ng-template #bookNavbar>
+        <div class='bookNavbarBox'>
+            <mat-grid-list class="bookNavbarList" rowHeight="50px" cols="5" gutterSize="10">
                 <mat-grid-tile>
-                    <button class="cover" (click)="goToAddbook()">
-                        <i class="fas fa-plus"></i>
-                    </button>        
+                    <button style="font-size:1em; color:#1AED3A;background-color:#C8C8C8;" (click)="approveRequest()">
+                        <i class="fas fa-check-circle"></i>
+                    </button>
                 </mat-grid-tile>
-                <mat-grid-tile  *ngFor="let book of userBooks" (click)="showBookNavbar(book)" (clickOutside)="hideBookNavbar(book)">
-                   <img class='cover' [ngClass]="{'blurred': (this.bookNavBarEnabled==true && this.bookSelected!=book) , 'regular': (this.bookNavBarEnabled==false ||this.bookSelected==book) }" [attr.src]="book.imagePath" />
+                <mat-grid-tile>
+                    <button style="font-size:1em; color:#ED1A1A;background-color:#C8C8C8;" (click)="rejectRequest()">
+                        <i class="fas fa-times-circle"></i>
+                    </button>
+                </mat-grid-tile>
+                <mat-grid-tile>
+                    <button style="font-size:1em; color:#2B2727;background-color:#C8C8C8;" (click)="startChat()">
+                        <i class="fas fa-comments"></i>
+                    </button>
+                </mat-grid-tile>
+                <mat-grid-tile>
+                    <button style="font-size:1em; color:#2B2727;;background-color:#C8C8C8;" (click)="showUser()">
+                        <i class="fas fa-user"></i>
+                    </button>
+                </mat-grid-tile>
+                <mat-grid-tile>
+                    <button style="font-size:1em; color:#2B2727;background-color:#C8C8C8;" (click)="removeBook()">
+                        <i class="fas fa-trash-alt"></i>
+                    </button>
                 </mat-grid-tile>
             </mat-grid-list>
         </div>
-        <p>add books to share!</p>
-        <div *ngIf="this.bookNavBarEnabled===true; then bookNavbar"></div>
-
-    </div>
-    <app-add-book  *ngSwitchCase="'add_book'" [masterBooksArray]="userBooks"></app-add-book>
-</container-element>
-</div>
-
-<ng-template #bookNavbar>
-        <div class='bookNavbarBox'>
-                <mat-grid-list class="bookNavbarList" rowHeight="50px" cols="5" gutterSize="10">
-                        <mat-grid-tile>
-                            <button style="font-size:1em; color:#1AED3A;background-color:#C8C8C8;" (click)="approveRequest()">
-                                <i class="fas fa-check-circle"></i>
-                            </button>        
-                        </mat-grid-tile>
-                        <mat-grid-tile>
-                            <button style="font-size:1em; color:#ED1A1A;background-color:#C8C8C8;" (click)="rejectRequest()">
-                                <i class="fas fa-times-circle"></i>
-                            </button>        
-                        </mat-grid-tile>
-                        <mat-grid-tile>
-                            <button style="font-size:1em; color:#2B2727;background-color:#C8C8C8;" (click)="startChat()">
-                                <i class="fas fa-comments"></i>
-                            </button>        
-                        </mat-grid-tile>
-                        <mat-grid-tile>
-                            <button style="font-size:1em; color:#2B2727;;background-color:#C8C8C8;" (click)="showUser()">
-                                <i class="fas fa-user"></i>
-                            </button>        
-                        </mat-grid-tile>
-                        <mat-grid-tile>
-                            <button style="font-size:1em; color:#2B2727;background-color:#C8C8C8;" (click)="removeBook()">
-                                    <i class="fas fa-trash-alt"></i>
-                                </button>        
-                        </mat-grid-tile>
-                    </mat-grid-list>
-        </div>
+    </ng-template>
 </ng-template>
 
+<ng-template #loading>
+    <div class="centered">
+        <mat-spinner [color]="'accent'"></mat-spinner>
+    </div>
+</ng-template>
