--- a/BookItSrc/src/app/main/sub-main/my-books/my-requests/my-requests.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-requests/my-requests.component.scss
@@ -68,7 +68,10 @@ label.header-cat {
   position: relative;
   right:5%;
 }
-
+#leftArrowIcon{
+  position: relative;
+  left:5%;
+}
 section {
   display: flex;
   align-items: center;
