--- a/BookItSrc/src/app/main/sub-main/my-books/add-book/add-book.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-books/add-book/add-book.component.scss
@@ -92,15 +92,15 @@ section {
   overflow: hidden;
   text-align: center;
   max-width: 100%;
-  max-height: 20%;
+  max-height: 12.5%;
   top:80%;
 }
 .addbook_title {
-  font-size: 12px;
+  font-size: 50%;
   font-weight: bold;
 }
 
 .addbook_author {
-  font-size: 10px;
+  font-size: 50%;
 }
 
