--- a/BookItSrc/src/app/main/sub-main/my-books/my-requests/my-requests.component.html
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-requests/my-requests.component.html
@@ -12,6 +12,7 @@
           <mat-grid-tile *ngFor="let book of myRequests" (click)="showBookNavbar(book)">
               <img class='cover' [ngClass]="{'blurred': (this.bookNavBarEnabled==true && this.bookSelected!=book) , 'regular': (this.bookNavBarEnabled==false ||this.bookSelected==book) }"
               [attr.src]="book.imagePath" />
+              <div *ngIf="book.currentRequest  && !book.currentRequest.pending && book.currentRequest.approved then requestApprove"></div>
             <div class='book-bottom'>
               <span class='addbook_title'>{{book.title}}</span>
               <br>
@@ -28,35 +29,28 @@
 </div>
 
 <ng-template #bookNavbar>
-  <div class='bookNavbarBox'>
-    <mat-grid-list class="bookNavbarList" rowHeight="50px" cols="5" gutterSize="10">
-      <mat-grid-tile>
-        <button style="font-size:1em; color:#1AED3A;background-color:#C8C8C8;" (click)="approveRequest()">
-          <i class="fas fa-check-circle"></i>
-        </button>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <button style="font-size:1em; color:#ED1A1A;background-color:#C8C8C8;" (click)="rejectRequest()">
-          <i class="fas fa-times-circle"></i>
-        </button>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <button style="font-size:1em; color:#2B2727;background-color:#C8C8C8;" (click)="startChat()">
-          <i class="fas fa-comments"></i>
-        </button>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <button style="font-size:1em; color:#2B2727;;background-color:#C8C8C8;" (click)="showUser()">
-          <i class="fas fa-user"></i>
-        </button>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <button style="font-size:1em; color:#2B2727;background-color:#C8C8C8;" (click)="removeBook()">
-          <i class="fas fa-trash-alt"></i>
-        </button>
-      </mat-grid-tile>
-    </mat-grid-list>
-  </div>
+    <div class='bookNavbarBox'>
+        <mat-grid-list class="bookNavbarList" rowHeight="56px" [cols]="bookNavbarCols" gutterSize="10">
+            <mat-grid-tile item-height="100%">
+                <button mat-icon-button (click)="hideBookNavbar(bookSelected)">
+                    <mat-icon svgIcon='down-arrow-black' class='icon'></mat-icon>
+                </button>
+            </mat-grid-tile>
+            <mat-grid-tile item-height="100%">
+                <button style="font-size:1em; color:#2B2727;background-color:#C8C8C8;" (click)="removeRequest()">
+                    <i class="fas fa-trash-alt"></i>
+                </button>
+            </mat-grid-tile>
+            <mat-grid-tile item-height="100%">
+                <button style="font-size:1em; color:#2B2727;;background-color:#C8C8C8;" (click)="showUser()">
+                    <i class="fas fa-user"></i>
+                </button>
+            </mat-grid-tile>
+            <mat-grid-tile item-height="100%">
+                <div *ngIf="bookSelected.currentRequest  && !bookSelected.currentRequest.pending && bookSelected.currentRequest.approved then chatButton"></div>
+            </mat-grid-tile>
+        </mat-grid-list>
+    </div>
 </ng-template>
 
 
@@ -73,6 +67,6 @@
   </div>
 </ng-template>
 
-<ng-template #requestPending>
-  <mat-icon svgIcon='request-pending' class="book-status"></mat-icon>
+<ng-template #requestApprove>
+    <mat-icon svgIcon='accept' class="book-status"></mat-icon>
 </ng-template>
