remove request and messege handler

--- a/BookItSrc/src/app/main/sub-main/my-books/my-requests/my-requests.component.html
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-requests/my-requests.component.html
@@ -70,3 +70,9 @@
 <ng-template #requestApprove>
     <mat-icon svgIcon='accept' class="book-status"></mat-icon>
 </ng-template>
+
+<ng-template #chatButton>
+    <button mat-icon-button (click)="startChat()">
+        <mat-icon svgIcon='new-message' class="icon"></mat-icon>
+    </button>
+</ng-template>
